# search-mcp

./: .gitignore  PLAN.md  README.md  TEST_REPORT.md  mcp_server.py  pyproject.toml  requirements.txt  test_async_api.py  test_keywords_research.py  test_social_engines.py
search_tool/: __init__.py  api.py  async_api.py  cli.py  config.py  keywords.py  research.py  scoring.py
search_tool/engines/: __init__.py  base.py  news.py  search.py  social.py
search_tool/utils/: antibot.py  auth.py  cache.py  formatter.py  health.py
src/search_mcp/: __init__.py  config.py  server.py
src/search_mcp/research/: __init__.py
src/search_mcp/sources/: __init__.py  company.py  news.py  web.py
src/search_mcp/sources/academic/: __init__.py  arxiv.py
src/search_mcp/sources/cn/: __init__.py  cnblogs.py  csdn.py  zhihu.py
src/search_mcp/sources/social/: __init__.py  hackernews.py  reddit.py
src/search_mcp/utils/: __init__.py  cache.py  fetcher.py  formatter.py  health.py  keywords.py
tests/: run_cache_health_tests.py  run_edge_case_tests.py  test_cache_health.py  test_search_mcp.py
